xliff-22/test-suite/core/invalid/bad_NoFile.xlf
<?xml version="1.0"?>
<xliff xmlns="urn:oasis:names:tc:xliff:document:2.2" version="2.2" srcLang="en">
</xliff>
